--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Random thoughts and occasionally useful articles from Lance Leonard, a technical writer, programmer, and problem solver currently located somewhere near Seat...">
 
   <link rel="stylesheet" href="/assets/main.css">
-  <link rel="canonical" href="/about/">
+  <link rel="canonical" href="http://localhost:4000/about/">
   <link rel="alternate" type="application/rss+xml" title="Lance&#39;s quips and quibbles" href="/feed.xml">
   
   
