New post, updates, and 'tpyo' fixes.

--- a/about/index.html
+++ b/about/index.html
@@ -73,7 +73,7 @@
 
 <h2 id="disclaimer">Disclaimer</h2>
 
-<p>Opinions and ideas expressed on this site are my own and do not necessarily reflect the views of my employer, family, friends, or anyone able to rub two synapses together.  Information is provided as-is with no guarantee as to accuracy, completeness, fitness of purpose, etc, and so on.  I warrant only that it worked on my machine well enough to write up.  I've tried to draw conclusions based on reproducible results and verifiable sources, but information on the Internet grows stale over time.  Your mileage may, and perhaps should, vary.  If it does, that's your own lookout.  Burn after reading; the Secretary disavows all knowledge.</p>
+<p>Opinions and ideas expressed on this site are my own and do not necessarily reflect the views of my employer, family, friends, or anyone able to rub two synapses together.  Information is provided as-is with no guarantee as to accuracy, completeness, fitness of purpose, etc, and so on.  I warrant only that it worked on my machine well enough to write up.  I've tried to draw conclusions based on reproducible results and verifiable sources.  Remember, though: information on the Internet grows stale over time.  Your mileage may, and perhaps should, vary.  If it does, that's your own lookout.  Burn after reading; the Secretary disavows all knowledge.</p>
 
 <p>(If you find a typo or technical error, please let me know.  My response will likely depend on my ability to replicate your findings, your level of professionalism/courtesy, the phase of the moon, and other secret ingredients unlikely to be revealed at the moment.)</p>
 
