--- a/scribbles/journal/initial-migration/index.html
+++ b/scribbles/journal/initial-migration/index.html
@@ -334,7 +334,7 @@
 </li>
 </ul>
 <p>Migration was handled carefully. Each step was tested and verified.</p>
-<p>This helps identify a few issues ad I&rsquo;ve filed tickets accordingly.  (Yes, I have a private Jira project to track work for the site.)</p>
+<p>This helped identify a few issues and I've filed tickets accordingly.  (Yes, I have a private Jira project to track work for the site.)</p>
 <p>I think the new site works at least as well as the earlier one. That may seem like a modest win (table stakes, some would say).  And, yet&hellip;how many times have we seen larger projects stumble because of less attention to detail?</p>
 <p>So here we are.  Is the site everything I imagined?  Not entirely.  But, I think it <em>is</em> an improvement and it sets a solid foundation for additional work.</p>
 <p>With luck, the next major update will happen within days.  And, with more luck (and diligence), that will only be the beginning.</p>
