Minor tweaks and fixes

--- a/scribbles/index.html
+++ b/scribbles/index.html
@@ -352,8 +352,8 @@ I have to admit that I was a little worried when starting the migration process,
 
 
 
-<p class="pt-0 mt-0">Welcome back to the ongoing work-in-progress. I&rsquo;m blowing off the dust, sweeping away the cobwebs, and setting up a new set of things.
-This site serves as a practical portfolio and personal knowledgebase. It provides writing samples and to …</p>
+<p class="pt-0 mt-0">Welcome back to the ongoing work-in-progress. I&rsquo;m blowing off the dust, sweeping away the cobwebs, and setting up new things.
+This site serves as a practical portfolio and personal knowledgebase. It provides writing samples and illustrates my …</p>
           <p class="pt-0"><a href="/scribbles/journal/restart-engines/" aria-label="Read more - Restart engines">Read more</a></p>
         </div>
       </li>
@@ -418,7 +418,7 @@ Hail and well met! Greetings, lifeform. Goooood Eeeeevvvening. Hello troubleshoo
         </div><div class="td-footer__center col-12 col-sm-6 py-2 order-sm-2">
           <span class="td-footer__copyright">&copy;
     2017&ndash;2024
-    <span class="td-footer__authors">Lance Leonard | <a href="https://choosealicense.com/licenses/mit/">MIT License</a> |</span></span><span class="td-footer__all_rights_reserved">All Rights Reserved</span><span class="ms-2"><a href="/about/#privacy-policy" target="_blank" rel="noopener">Privacy Policy</a></span>
+    <span class="td-footer__authors">Lance Leonard | <a href="https://choosealicense.com/licenses/mit/">MIT License</a> |</span></span><span class="td-footer__all_rights_reserved">All Rights Reserved</span><span class="ms-2"><a href="/about/privacy-policy" target="_blank" rel="noopener">Privacy Policy</a></span>
         </div>
       </div>
     </div>
