--- a/scribbles/trifles/index.html
+++ b/scribbles/trifles/index.html
@@ -379,7 +379,7 @@ Like everything else on the site, they&rsquo;re provided as-is. Interest will li
         </div><div class="td-footer__center col-12 col-sm-6 py-2 order-sm-2">
           <span class="td-footer__copyright">&copy;
     2017&ndash;2024
-    <span class="td-footer__authors">Lance Leonard | <a href="https://choosealicense.com/licenses/mit/">MIT License</a> |</span></span><span class="td-footer__all_rights_reserved">All Rights Reserved</span><span class="ms-2"><a href="/about/#privacy-policy" target="_blank" rel="noopener">Privacy Policy</a></span>
+    <span class="td-footer__authors">Lance Leonard | <a href="https://choosealicense.com/licenses/mit/">MIT License</a> |</span></span><span class="td-footer__all_rights_reserved">All Rights Reserved</span><span class="ms-2"><a href="/about/privacy-policy" target="_blank" rel="noopener">Privacy Policy</a></span>
         </div>
       </div>
     </div>
