Update for 23 May 2024

--- a/about/index.html
+++ b/about/index.html
@@ -206,6 +206,8 @@ Disclaimer Opinions and ideas expressed on this site are my own and do not neces
   <a href="/tips/doc/tools/markdown/" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipsdoctoolsmarkdown"><span class="">Markdown</span></a>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipsdoctoolsmkdocs-li">
   <a href="/tips/doc/tools/mkdocs/" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipsdoctoolsmkdocs"><span class="">MKDocs</span></a>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipsdoctoolspandoc-li">
+  <a href="/tips/doc/tools/pandoc/" title="Pandoc conversion tips" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipsdoctoolspandoc"><span class="">Pandoc</span></a>
 </li>
   </ul>
 </li>
@@ -226,10 +228,20 @@ Disclaimer Opinions and ideas expressed on this site are my own and do not neces
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipsweb-li">
   <a href="/tips/web/" title="HTML, CSS, and more." class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipsweb"><span class="">HTML &amp; CSS</span></a>
   <ul class="ul-3 foldable">
-    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebcss-li">
-  <a href="/tips/web/css/" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebcss"><span class=""></span></a>
-</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebhtml-li">
-  <a href="/tips/web/html/" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebhtml"><span class=""></span></a>
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipswebcss-li">
+  <a href="/tips/web/css/" title="Cascading style sheets (CSS)" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebcss"><span class="">CSS</span></a>
+  <ul class="ul-4 foldable">
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebcssnewspapers-columns-li">
+  <a href="/tips/web/css/newspapers-columns/" title="Simple newspaper columns" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipswebcssnewspapers-columns"><span class="">Newspaper columns</span></a>
+</li>
+  </ul>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipswebhtml-li">
+  <a href="/tips/web/html/" title="HTML samples, ticks, and tidbits" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebhtml"><span class="">HTML</span></a>
+  <ul class="ul-4 foldable">
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebhtmldetails-element-li">
+  <a href="/tips/web/html/details-element/" title="Hide details until needed" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipswebhtmldetails-element"><span class="">Hide details</span></a>
+</li>
+  </ul>
 </li>
   </ul>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipsjavascript-li">
