--- a/scribbles/journal/first-post/index.html
+++ b/scribbles/journal/first-post/index.html
@@ -203,6 +203,8 @@
   <a href="/tips/doc/tools/markdown/" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipsdoctoolsmarkdown"><span class="">Markdown</span></a>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipsdoctoolsmkdocs-li">
   <a href="/tips/doc/tools/mkdocs/" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipsdoctoolsmkdocs"><span class="">MKDocs</span></a>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipsdoctoolspandoc-li">
+  <a href="/tips/doc/tools/pandoc/" title="Pandoc conversion tips" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipsdoctoolspandoc"><span class="">Pandoc</span></a>
 </li>
   </ul>
 </li>
@@ -223,10 +225,20 @@
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipsweb-li">
   <a href="/tips/web/" title="HTML, CSS, and more." class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipsweb"><span class="">HTML &amp; CSS</span></a>
   <ul class="ul-3 foldable">
-    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebcss-li">
-  <a href="/tips/web/css/" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebcss"><span class=""></span></a>
-</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebhtml-li">
-  <a href="/tips/web/html/" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebhtml"><span class=""></span></a>
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipswebcss-li">
+  <a href="/tips/web/css/" title="Cascading style sheets (CSS)" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebcss"><span class="">CSS</span></a>
+  <ul class="ul-4 foldable">
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebcssnewspapers-columns-li">
+  <a href="/tips/web/css/newspapers-columns/" title="Simple newspaper columns" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipswebcssnewspapers-columns"><span class="">Newspaper columns</span></a>
+</li>
+  </ul>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipswebhtml-li">
+  <a href="/tips/web/html/" title="HTML samples, ticks, and tidbits" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebhtml"><span class="">HTML</span></a>
+  <ul class="ul-4 foldable">
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebhtmldetails-element-li">
+  <a href="/tips/web/html/details-element/" title="Hide details until needed" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipswebhtmldetails-element"><span class="">Hide details</span></a>
+</li>
+  </ul>
 </li>
   </ul>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipsjavascript-li">
@@ -354,7 +366,6 @@
 <p>If you find anything useful, feel free to share and enjoy (share and enjoy). Please give credit where credit is due. You may not pinch and poach. If something&rsquo;s useful, cite where you found it.</p>
 <p>If you feel I&rsquo;ve not cited things correctly, let me know so I can take appropriate action.</p>
 <p>Things are a bit of a mess at the moment, but the style will settle down and start telling you things you need to know. I hope.</p>
-
 	<ul class="list-unstyled d-flex justify-content-between align-items-center mb-0 pt-5">
   <li>
     <a class="btn btn-primary disabled"><span class="me-1">←</span>Previous</a>
