--- a/scribbles/journal/index.html
+++ b/scribbles/journal/index.html
@@ -199,6 +199,8 @@
   <a href="/tips/doc/tools/markdown/" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipsdoctoolsmarkdown"><span class="">Markdown</span></a>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipsdoctoolsmkdocs-li">
   <a href="/tips/doc/tools/mkdocs/" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipsdoctoolsmkdocs"><span class="">MKDocs</span></a>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipsdoctoolspandoc-li">
+  <a href="/tips/doc/tools/pandoc/" title="Pandoc conversion tips" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipsdoctoolspandoc"><span class="">Pandoc</span></a>
 </li>
   </ul>
 </li>
@@ -219,10 +221,20 @@
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipsweb-li">
   <a href="/tips/web/" title="HTML, CSS, and more." class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipsweb"><span class="">HTML &amp; CSS</span></a>
   <ul class="ul-3 foldable">
-    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebcss-li">
-  <a href="/tips/web/css/" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebcss"><span class=""></span></a>
-</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebhtml-li">
-  <a href="/tips/web/html/" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebhtml"><span class=""></span></a>
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipswebcss-li">
+  <a href="/tips/web/css/" title="Cascading style sheets (CSS)" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebcss"><span class="">CSS</span></a>
+  <ul class="ul-4 foldable">
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebcssnewspapers-columns-li">
+  <a href="/tips/web/css/newspapers-columns/" title="Simple newspaper columns" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipswebcssnewspapers-columns"><span class="">Newspaper columns</span></a>
+</li>
+  </ul>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipswebhtml-li">
+  <a href="/tips/web/html/" title="HTML samples, ticks, and tidbits" class="align-left ps-0 td-sidebar-link td-sidebar-link__section" id="m-tipswebhtml"><span class="">HTML</span></a>
+  <ul class="ul-4 foldable">
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child collapse" id="m-tipswebhtmldetails-element-li">
+  <a href="/tips/web/html/details-element/" title="Hide details until needed" class="align-left ps-0 td-sidebar-link td-sidebar-link__page" id="m-tipswebhtmldetails-element"><span class="">Hide details</span></a>
+</li>
+  </ul>
 </li>
   </ul>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child collapse" id="m-tipsjavascript-li">
@@ -345,7 +357,7 @@ I have to admit that I was a little worried when starting the migration process,
           <p class="mb-2 mb-md-3"><small class="text-body-secondary">Wednesday, May 01, 2024 in Journal</small></p>
           <header class="article-meta">
             
-  <p class="reading-time"><i class="fa-solid fa-clock" aria-hidden="true"></i>&nbsp; 2 minute read &nbsp;</p>
+  <p class="reading-time"><i class="fa-solid fa-clock" aria-hidden="true"></i>&nbsp; less than a minute &nbsp;</p>
 </header>
           
 
