--- a/tips/apps/index.html
+++ b/tips/apps/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html itemscope itemtype="http://schema.org/WebPage" lang="en" class="no-js">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="alternate" type="application/rss&#43;xml" href="https://lanceleonard.com/tips/apps/index.xml">
@@ -128,7 +128,7 @@
     aria-label="Search this site…"
     autocomplete="off"
     
-    data-offline-search-index-json-src="/offline-search-index.8968d69bcd95ac18fda260ee45e1e83b.json"
+    data-offline-search-index-json-src="/offline-search-index.d84685bf95551cf3ba6f0858a0a19565.json"
     data-offline-search-base-href="/"
     data-offline-search-max-results="10"
   >
@@ -152,7 +152,7 @@
     aria-label="Search this site…"
     autocomplete="off"
     
-    data-offline-search-index-json-src="/offline-search-index.8968d69bcd95ac18fda260ee45e1e83b.json"
+    data-offline-search-index-json-src="/offline-search-index.d84685bf95551cf3ba6f0858a0a19565.json"
     data-offline-search-base-href="/"
     data-offline-search-max-results="10"
   >
@@ -339,6 +339,10 @@
   <input type="checkbox" id="m-tipswebhtmldetails-element-check"/>
   <label for="m-tipswebhtmldetails-element-check"><a href="/tips/web/html/details-element/" title="Hide details until needed" class="align-left ps-0  td-sidebar-link td-sidebar-link__page" id="m-tipswebhtmldetails-element"><span class="">Hide details</span></a></label>
   
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-tipswebhtmlie-doc-modes-li">
+  <input type="checkbox" id="m-tipswebhtmlie-doc-modes-check"/>
+  <label for="m-tipswebhtmlie-doc-modes-check"><a href="/tips/web/html/ie-doc-modes/" title="Internet Explorer document mode settings" class="align-left ps-0  td-sidebar-link td-sidebar-link__page" id="m-tipswebhtmlie-doc-modes"><span class="">IE doc mode</span></a></label>
+  
 </li>
   </ul>
 </li>
@@ -381,6 +385,32 @@
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-scribblesjournalfirst-post-li">
   <input type="checkbox" id="m-scribblesjournalfirst-post-check"/>
   <label for="m-scribblesjournalfirst-post-check"><a href="/scribbles/journal/first-post/" title="First post: Don&#39;t panic" class="align-left ps-0  td-sidebar-link td-sidebar-link__page" id="m-scribblesjournalfirst-post"><span class="">Don&#39;t panic!</span></a></label>
+  
+</li>
+  </ul>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child" id="m-scribblesthoughts-li">
+  <input type="checkbox" id="m-scribblesthoughts-check"/>
+  <label for="m-scribblesthoughts-check"><a href="/scribbles/thoughts/" title="Random thoughts" class="align-left ps-0  td-sidebar-link td-sidebar-link__section" id="m-scribblesthoughts"><span class="">Thoughts</span></a></label>
+  
+  <ul class="ul-3 foldable">
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-scribblesthoughtsphoenix-bingo-card-li">
+  <input type="checkbox" id="m-scribblesthoughtsphoenix-bingo-card-check"/>
+  <label for="m-scribblesthoughtsphoenix-bingo-card-check"><a href="/scribbles/thoughts/phoenix-bingo-card/" title="Is Phoenix on your bingo card?" class="align-left ps-0  td-sidebar-link td-sidebar-link__page" id="m-scribblesthoughtsphoenix-bingo-card"><span class="">Phoenix  bingo card</span></a></label>
+  
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-scribblesthoughtssuccess-qualities-li">
+  <input type="checkbox" id="m-scribblesthoughtssuccess-qualities-check"/>
+  <label for="m-scribblesthoughtssuccess-qualities-check"><a href="/scribbles/thoughts/success-qualities/" title="Qualities for successful tech writers" class="align-left ps-0  td-sidebar-link td-sidebar-link__page" id="m-scribblesthoughtssuccess-qualities"><span class="">Qualities for success</span></a></label>
+  
+</li>
+  </ul>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child" id="m-scribblestrifles-li">
+  <input type="checkbox" id="m-scribblestrifles-check"/>
+  <label for="m-scribblestrifles-check"><a href="/scribbles/trifles/" title="Trifles and Tidbits" class="align-left ps-0  td-sidebar-link td-sidebar-link__section" id="m-scribblestrifles"><span class="">Trifles</span></a></label>
+  
+  <ul class="ul-3 foldable">
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-scribblestriflesklingon-coder-li">
+  <input type="checkbox" id="m-scribblestriflesklingon-coder-check"/>
+  <label for="m-scribblestriflesklingon-coder-check"><a href="/scribbles/trifles/klingon-coder/" title="The Compleat Klingon Coder" class="align-left ps-0  td-sidebar-link td-sidebar-link__page" id="m-scribblestriflesklingon-coder"><span class="">Klingon coder</span></a></label>
   
 </li>
   </ul>
