Update: 25 Aug 18a - Update stale links & asst edits.

--- a/tips/unix/package-managers/index.html
+++ b/tips/unix/package-managers/index.html
@@ -131,7 +131,7 @@
     aria-label="Search this site…"
     autocomplete="off"
     
-    data-offline-search-index-json-src="/offline-search-index.8ef6216d833f16278f58d592308c8753.json"
+    data-offline-search-index-json-src="/offline-search-index.bf322293b0566407b731b5c8ab18bad0.json"
     data-offline-search-base-href="/"
     data-offline-search-max-results="10"
   >
@@ -155,7 +155,7 @@
     aria-label="Search this site…"
     autocomplete="off"
     
-    data-offline-search-index-json-src="/offline-search-index.8ef6216d833f16278f58d592308c8753.json"
+    data-offline-search-index-json-src="/offline-search-index.bf322293b0566407b731b5c8ab18bad0.json"
     data-offline-search-base-href="/"
     data-offline-search-max-results="10"
   >
@@ -573,7 +573,7 @@
       </tr>
       <tr>
           <td><a href="https://docs.fedoraproject.org/en-US/docs/">Fedora Linux</a></td>
-          <td><a href="https://docs.fedoraproject.org/en-US/quick-docs/dnf/">dnf</a> (v22+)<br><a href="https://linuxconcept.com/yum-package-manager-a-complete-guide/">yum</a> (v21 and earlier)</td>
+          <td><a href="https://docs.fedoraproject.org/en-US/quick-docs/dnf/">dnf</a> (v22+)<br><a href="https://linuxvox.com/blog/linux-what-is-yum/">yum</a> (v21 and earlier)</td>
       </tr>
       <tr>
           <td><a href="https://docs.freebsd.org/en/">FreeBSD</a></td>
