--- a/tips/windows/elevation-prompt-shortcuts/index.html
+++ b/tips/windows/elevation-prompt-shortcuts/index.html
@@ -133,7 +133,7 @@
     aria-label="Search this site…"
     autocomplete="off"
     
-    data-offline-search-index-json-src="/offline-search-index.8ef6216d833f16278f58d592308c8753.json"
+    data-offline-search-index-json-src="/offline-search-index.bf322293b0566407b731b5c8ab18bad0.json"
     data-offline-search-base-href="/"
     data-offline-search-max-results="10"
   >
@@ -157,7 +157,7 @@
     aria-label="Search this site…"
     autocomplete="off"
     
-    data-offline-search-index-json-src="/offline-search-index.8ef6216d833f16278f58d592308c8753.json"
+    data-offline-search-index-json-src="/offline-search-index.bf322293b0566407b731b5c8ab18bad0.json"
     data-offline-search-base-href="/"
     data-offline-search-max-results="10"
   >
@@ -558,7 +558,7 @@
 <ul>
 <li>To quickly accept an elevation prompt, press <code>Left arrow</code> and then press `Enter.</li>
 <li>To cancel a prompt, press <code>Esc</code> (the escape key).</li>
-<li>In many (though not all) versions of Windows, you can use <code>Spacebar</code> to select the default button in an elevation prompt.</li>
+<li>In many (though not all) versions of Windows, you can use <code>Space</code> to select the default button in an elevation prompt.</li>
 </ul>
 <p>In my experience, the first shortcut is the most widely supported.  There&rsquo;s no guarantee that will continue in future Windows releases.</p>
 <h2 id="historical-perspective">Historical perspective</h2>
