25 Aug 18, update 2: More minor edits.

--- a/about/index.html
+++ b/about/index.html
@@ -605,7 +605,7 @@
 <h2 id="generative-ai-use">Generative AI use</h2>
 <p>The site&rsquo;s content is researched, written, and edited by hand (as you can probably tell by the everpresent &ldquo;tpyos&rdquo;).</p>
 <p>I do not use generative AI models to generate production code or to create final content. All errors and mistakes are human-generated.</p>
-<p>I do use AI tools to help develop my ideas and approaches. For example, the <a href="/tips/doc/readability/">Readability example</a> includes a text sample originally generated using ChatGPT. As mentioned in the article, this sample was reviewed and edited for clarity. The article itself was written by hand.</p>
+<p>I do use AI tools to help develop my ideas and approaches. For example, the <a href="/tips/doc/readbility">Readability example</a> includes a text sample originally generated using ChatGPT. As mentioned in the article, this sample was reviewed and edited for clarity. The article itself was written by hand.</p>
 <p>I am also looking into using AI tools to help review and evaluate content. However, I still review and consider each recommendation.</p>
 <p>This means that none of my articles are primarily sourced or written using AI models or AI-based tools. If there&rsquo;s a problem with the way the words flow, that&rsquo;s entirely my doing.</p>
 <p>This statement may seem like an odd thing to include, but it seemed important, especially given the wide range of opinions and ideas currently floating in the &lsquo;sphere.</p>
@@ -613,8 +613,8 @@
 <ul>
 <li>Updates
 <ul>
-<li>8 July 2025: Updated AI statement</li>
-<li>17 July 2024: Minor updates &amp; edits</li>
+<li>8 July 2025: Updated the AI statement.</li>
+<li>17 July 2024: Minor updates &amp; edits.</li>
 <li>6 May 2024: Reviewed &amp; updated for site revamp</li>
 <li>1 June 2018: Minor edits</li>
 <li>26 January 2017: original post</li>
