--- a/tips/unix/package-managers/index.html
+++ b/tips/unix/package-managers/index.html
@@ -573,7 +573,7 @@
       </tr>
       <tr>
           <td><a href="https://docs.fedoraproject.org/en-US/docs/">Fedora Linux</a></td>
-          <td><a href="https://docs.fedoraproject.org/en-US/quick-docs/dnf/">dnf</a> (v22+)<br><a href="https://linuxvox.com/blog/linux-what-is-yum/">yum</a> (v21 and earlier)</td>
+          <td><a href="https://docs.fedoraproject.org/en-US/quick-docs/dnf/">dnf</a> (v22+)<br><a href="https://linuxconcept.com/yum-package-manager-a-complete-guide/">yum</a> (v21 and earlier)</td>
       </tr>
       <tr>
           <td><a href="https://docs.freebsd.org/en/">FreeBSD</a></td>
