--- a/tips/windows/elevation-prompt-shortcuts/index.html
+++ b/tips/windows/elevation-prompt-shortcuts/index.html
@@ -558,7 +558,7 @@
 <ul>
 <li>To quickly accept an elevation prompt, press <code>Left arrow</code> and then press `Enter.</li>
 <li>To cancel a prompt, press <code>Esc</code> (the escape key).</li>
-<li>In many (though not all) versions of Windows, you can use <code>Space</code> to select the default button in an elevation prompt.</li>
+<li>In many (though not all) versions of Windows, you can use <code>Spacebar</code> to select the default button in an elevation prompt.</li>
 </ul>
 <p>In my experience, the first shortcut is the most widely supported.  There&rsquo;s no guarantee that will continue in future Windows releases.</p>
 <h2 id="historical-perspective">Historical perspective</h2>
