Another batch of minor edits.

--- a/scribbles/index.html
+++ b/scribbles/index.html
@@ -708,7 +708,7 @@ Last …</p>
 
 
 
-<p class="pt-0 mt-0">It&rsquo;s been several weeks since I began reimplementing the website. It&rsquo;s been an interesting experience to say the least. It&rsquo;s fun to create something new and watch it come together. It&rsquo;s also a little aggravating to find things …</p>
+<p class="pt-0 mt-0">It&rsquo;s been several weeks since I began reimplementing the website. It&rsquo;s been an interesting experience to say the least. I&rsquo;ve had fun creating something new and watching it come together. I&rsquo;ve also been a little aggravated to …</p>
           <p class="pt-0"><a href="/scribbles/journal/six-week-progress/" aria-label="Read more - Six weeks later">Read more</a></p>
         </div>
       </li>
