--- a/scribbles/journal/index.html
+++ b/scribbles/journal/index.html
@@ -559,7 +559,7 @@ I grabbed my keyboard, fired up the editor, and started putting ideas into marku
 
 
 
-<p class="pt-0 mt-0">It&rsquo;s been several weeks since I began reimplementing the website. It&rsquo;s been an interesting experience to say the least. It&rsquo;s fun to create something new and watch it come together. It&rsquo;s also a little aggravating to find things …</p>
+<p class="pt-0 mt-0">It&rsquo;s been several weeks since I began reimplementing the website. It&rsquo;s been an interesting experience to say the least. I&rsquo;ve had fun creating something new and watching it come together. I&rsquo;ve also been a little aggravated to …</p>
           <p class="pt-0"><a href="/scribbles/journal/six-week-progress/" aria-label="Read more - Six weeks later">Read more</a></p>
         </div>
       </li>
@@ -595,7 +595,7 @@ I have to admit that I was a little worried when starting the migration process,
 
 
 <p class="pt-0 mt-0">Welcome back to the ongoing work-in-progress. I&rsquo;m blowing off the dust, sweeping away the cobwebs, and setting up new things.
-This site serves as a practical portfolio and personal knowledgebase. It provides writing samples and illustrates my …</p>
+This site serves as a practical portfolio and personal resource. It provides writing samples and illustrates my …</p>
           <p class="pt-0"><a href="/scribbles/journal/restart-engines/" aria-label="Read more - Restart engines">Read more</a></p>
         </div>
       </li>
